deploy/kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-test
  labels:
    name: pod-test
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
      - containerPort: 80
