deploy/kubernetes/ingress-external-services.yaml
# external-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: default
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
    - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: default
spec:
  type: ExternalName
  externalName: jenkins.jenkins.svc.cluster.local
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: default
spec:
  type: ExternalName
  externalName: nexus-nexus-repository-manager.nexus.svc.cluster.local
  ports:
    - port: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
  namespace: default
spec:
  type: ExternalName
  externalName: rabbitmq.rabbitmq.svc.cluster.local
  ports:
    - port: 15672
